Added route for Ausbildung
